clusters/common/apps/common/media/jellyfin/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  serviceName: jellyfin
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
    whenScaled: Delete
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      hostname: jellyfin
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          resources:
            requests:
              gpu.intel.com/i915: "1"
            limits:
              gpu.intel.com/i915: "1"
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          volumeMounts:
            - name: media-share
              mountPath: /media-share
            - name: config
              mountPath: /config
            # - name: transcode
            #   mountPath: /config/transcodes
      volumes:
        - name: common-media-share
          persistentVolumeClaim:
            claimName: common-media-share
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
