clusters/common/apps/common/media/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media 
  annotations:
    item.homer.rajsingh.info/name: "Jellyfin"
    item.homer.rajsingh.info/subtitle: "TV/Movies/Music/Books"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/jellyfin/jellyfin/refs/heads/master/Jellyfin.Server/Jellyfin.Server.ico"
    item.homer.rajsingh.info/keywords: "media, server, streaming"

spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cdn
      namespace: common
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ${LOCATION}
      namespace: common
  hostnames:
    - "jellyfin.${COMMON_DOMAIN}"
    - "jellyfin.${LOCATION}${COMMON_DOMAIN}"
  rules:
    - matches:
        - path:
            type: Exact
            value: /metrics
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyfin
          port: 8096
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
